cloudformation/infra.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Network resource template part1
#########################################################
Resources:
  # VPC, IGW설정
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: VPC
  # 인터넷 접속을 위한 게이트웨이 생성
  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: igw
  VpcgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: VPC
      InternetGatewayId:
        Ref: IGW
  ############### Subnet, RouteTable ###############
  # 컨테이너 관련 설정 
  ## 컨테이너 애플리케이션용 프라이빗 서브넷
  SubnetPrivateContainer1A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.8.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: subnet-private-container-1a
        - Key: Type
          Value: Isolated
  SubnetPrivateContainer1C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.9.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: subnet-private-container-1c
        - Key: Type
          Value: Isolated
  ## 컨테이너 애플리케이션용 라우팅 테이블
  RouteApp:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: route-app
  ## 컨테이너 서브넷과 라우팅 연결
  RouteAppAssociation1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteApp
      SubnetId:
        Ref: SubnetPrivateContainer1A
  RouteAppAssociation1C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteApp
      SubnetId:
        Ref: SubnetPrivateContainer1C

  # DB관련 설정
  ## DB용 프라이빗 서브넷
  SubnetPrivateDb1A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.16.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: subnet-private-db-1a
        - Key: Type
          Value: Isolated
  SubnetPrivateDb1C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.17.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: subnet-private-db-1c
        - Key: Type
          Value: Isolated
  ## DB용 라우팅 테이블
  RouteDb:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: route-db
  ## DB 서브넷에 라우팅 연결
  RouteDbAssociation1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteDb
      SubnetId:
        Ref: SubnetPrivateDb1A
  RouteDbAssociation1C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteDb
      SubnetId:
        Ref: SubnetPrivateDb1C
  
  # Ingress 관련 설정
  ## Ingress용 퍼블릭 서브넷
  SubnetPublicIngress1A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: subnet-public-ingress-1a
        - Key: Type
          Value: Public
  SubnetPublicIngress1C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.1.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: subnet-public-ingress-1c
        - Key: Type
          Value: Public
  ## Ingress용 라우팅 테이블
  RouteIngress:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value: route-ingress
  ## Ingress용 서브넷에 라우팅 연결
  RouteIngressAssociation1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteIngress
      SubnetId:
        Ref: SubnetPublicIngress1A
  RouteIngressAssociation1C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteIngress
      SubnetId:
        Ref: SubnetPublicIngress1C
  ## Ingress용 라우팅 테이블의 기본 라우팅
  RouteIngressDefault:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: RouteIngress
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IGW
    DependsOn:
      - VpcgwAttachment

  # 관리 서버 관련 설정
  ## 관리용 퍼블릭 서브넷
  SubnetPublicManagement1A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.240.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: subnet-public-management-1a
        - Key: Type
          Value: Public
  SubnetPublicManagement1C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.241.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: subnet-public-management-1c
        - Key: Type
          Value: Public
  ## 관리용 서브넷의 라우팅은 Ingress와 동일하게 생성
  RouteManagementAssociation1A:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteIngress
      SubnetId:
        Ref: SubnetPublicManagement1A
  RouteManagementAssociation1C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: RouteIngress
      SubnetId:
        Ref: SubnetPublicManagement1C
  
  # VPC 엔드포인트 관련 설정
  ## VPC 엔드포인트(Egress통신)용 프라이빗 서브넷
  SubnetPrivateEgress1A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.248.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: subnet-private-egress-1a
        - Key: Type
          Value: Isolated
  SubnetPrivateEgress1C:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.249.0/24
      VpcId:
        Ref: VPC
      AvailabilityZone: 
        Fn::Select: 
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: subnet-private-egress-1c
        - Key: Type
          Value: Isolated
  
  ############### Security groups ###############
  # 보안 그룹 생성
  ## 인터넷 공개용 보안 그룹 생성
  SgIngress:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ingress
      GroupName: ingress
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:3000
          FromPort: 3000
          IpProtocol: tcp
          ToPort: 3000
        - CidrIpv6: ::/0
          Description: from ::/0:3000
          FromPort: 3000
          IpProtocol: tcp
          ToPort: 3000
      Tags:
        - Key: Name
          Value: sg-ingress
      VpcId:
        Ref: VPC
  ## 관리 서버용 보안 그룹 생성
  SgManagement:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group of management server
      GroupName: management
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: sg-management
      VpcId:
        Ref: VPC
  ## 백엔드 컨테이너 애플리케이션용 보안 그룹 생성
  SgContainer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group of backend app
      GroupName: container
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: sg-container
      VpcId:
        Ref: VPC
  ## 프론트엔드 컨테이너 애플리케이션용 보안 그룹 생성
  SgFrontContainer:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group of front container app
      GroupName: front-container
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: sg-front-container
      VpcId:
        Ref: VPC
  ## 내부용 로드밸런서의 보안 그룹 생성
  SgInternal:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for internal load balancer
      GroupName: internal
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: sg-internal
      VpcId:
        Ref: VPC
  ## DB용 보안 그룹 생성
  SgDb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group of database
      GroupName: database
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: sg-db
      VpcId:
        Ref: VPC
  ## VPC 엔드포인트용 보안 그룹 설정
  SgEgress:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group of VPC Endpoint
      GroupName: egress
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: Name
          Value: sg-vpce
      VpcId:
        Ref: VPC

  # 역할 연결
  ## Internet LB -> Front Container
  SgFrontContainerFromsSgIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: HTTP for Ingress
      FromPort: 3000
      GroupId:
        Fn::GetAtt:
          - SgFrontContainer
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgIngress
          - GroupId
      ToPort: 3000
  ## Front Container -> Internal LB
  SgInternalFromSgFrontContainer:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: HTTP for front container
      FromPort: 3001
      GroupId:
        Fn::GetAtt:
          - SgInternal
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgFrontContainer
          - GroupId
      ToPort: 3001
  ## Internal LB -> Back Container
  SgContainerFromSgInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: HTTP for internal lb
      FromPort: 3001
      GroupId:
        Fn::GetAtt:
          - SgContainer
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgInternal
          - GroupId
      ToPort: 3001 
  ## Back container -> DB
  SgDbFromSgContainerTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: MySQL protocol from backend App
      FromPort: 3306
      GroupId:
        Fn::GetAtt:
          - SgDb
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgContainer
          - GroupId
      ToPort: 3306
  ## Front container -> DB
  SgDbFromSgFrontContainerTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: MySQL protocol from frontend App
      FromPort: 3306
      GroupId:
        Fn::GetAtt:
          - SgDb
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgFrontContainer
          - GroupId
      ToPort: 3306
  ## Management server -> DB
  SgDbFromSgManagementTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: MySQL protocol from management server
      FromPort: 3306
      GroupId:
        Fn::GetAtt:
          - SgDb
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgManagement
          - GroupId
      ToPort: 3306  
  ## Management server -> Internal LB
  SgInternalFromSgManagementTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: HTTP for management server
      FromPort: 3001
      GroupId:
        Fn::GetAtt:
          - SgInternal
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgManagement
          - GroupId
      ToPort: 3001

  ### Back container -> VPC endpoint
  SgVpceFromSgContainerTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: HTTPS for Container App
      FromPort: 443
      GroupId:
        Fn::GetAtt:
          - SgEgress
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgContainer
          - GroupId
      ToPort: 443
  ### Front container -> VPC endpoint
  SgVpceFromSgFrontContainerTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: HTTPS for Front Container App
      FromPort: 443
      GroupId:
        Fn::GetAtt:
          - SgEgress
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgFrontContainer
          - GroupId
      ToPort: 443
  ### Management Server -> VPC endpoint
  SgVpceFromSgManagementTCP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: HTTPS for management server
      FromPort: 443
      GroupId:
        Fn::GetAtt:
          - SgEgress
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - SgManagement
          - GroupId
      ToPort: 443
